# forge

./: .gitignore  MAKING_IT_IMPRESSIVE.md  PROJECT_REPORT_FOR_RESUME.md  SRS.md  epics.md  frontendchanges.md  iteration3_USER_READY_PLAN.md  plan.md
code/apps/api/: .coverage  README.md  coverage.xml  pyproject.toml
code/apps/api/app/: main.py
code/apps/api/app/core/: auth.py  config.py  logging.py  monitoring.py  rate_limit.py
code/apps/api/app/models/: common.py  execution.py
code/apps/api/app/routers/: ai_builder.py  deployments.py  executions.py  graphs.py  health.py  integrations.py  marketplace.py  mcp.py  nodes.py  setup.py  users.py  webhooks.py
code/apps/api/app/services/: agent_runner.py  ai_builder.py  approval.py  approval_gates.py  audit.py  billing.py  checkpoint.py  conditional_branch.py  dag_validator.py  execution.py  expressions.py  llm_caller.py  mcp_executor.py  mcp_gateway.py  rag_retriever.py  supabase.py  user_keys.py
code/apps/api/app/services/ai/: node_catalog.py  templates.py
code/apps/api/app/services/deploy/: __init__.py  cloud.py  code_export.py  docker_export.py  mcp_deploy.py  orchestrator.py
code/apps/api/app/services/integrations/: __init__.py  service.py
code/apps/api/app/services/nodes/: __init__.py  action.py  ai_agent.py  app_event_trigger.py  approval_step.py  base.py  conditional_branch.py  delay.py  error_handler.py  filter_node.py  form_submission_trigger.py  loop.py  (+20 more)
code/apps/api/app/workers/: execution_workflow.py
code/apps/api/tests/: test_ai_builder_router.py  test_ai_builder_templates.py  test_auth.py  test_dag_validator.py  test_deployments_router.py  test_execution.py  test_graphs_router.py  test_health.py  test_integrations_router.py  test_mcp.py  test_minimal_workflows.py  test_monitoring.py  test_nodes_router.py  test_rate_limit.py  test_rls_migration.py  test_user_keys.py  test_users_router.py
(+157 files in other folders)
